# student-performance-predictor

./: README.md  app.py  pyproject.toml
artificats/: preprocessor.pkl
models/: model.pkl
notebooks/: 01-eda.ipynb
src/: config.py  constant.py  exception.py  logger.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/entity/: artifact.py  config.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: common.py  model_utils.py
